--- a/init.sunfire.rc
+++ b/init.sunfire.rc
@@ -1,15 +1,13 @@
 import init.sunfire.usb.rc
 
-on init
+on early-init
     export EXTERNAL_STORAGE /mnt/sdcard
     export PHONE_STORAGE /mnt/emmc
     # create mountpoints for storage
-    mkdir /mnt/emmc 0000 system system
     mkdir /mnt/sdcard 0000 system system
-    mkdir /emmc/sdcard 0000 system system
-    symlink /mnt/emmc /emmc
+    mkdir /mnt/emmc 0000 system system
     symlink /mnt/sdcard /sdcard
-    symlink /mnt/sdcard /emmc/sdcard
+    symlink /mnt/emmc /emmc
     # battery driver permissions
     mkdir /pds 0755 root root
     mkdir /osh 0000 root root
@@ -25,8 +23,10 @@ on fs
     exec /system/bin/logwrapper /system/bin/pds_perm_fix.sh
 
 on post-fs
-    symlink /system/lib /vendor/lib
     # once everything is setup, no need to modify /
+    mount rootfs rootfs / ro remount
+
+    # usb disk
     mkdir /mnt/usbdisk_1.0 0000 system system
     mkdir /mnt/usbdisk_1.1 0000 system system
     mkdir /mnt/usbdisk_1.2 0000 system system
@@ -35,10 +35,13 @@ on post-fs
     mkdir /mnt/usbdisk_1.5 0000 system system
     mkdir /mnt/usbdisk_1.6 0000 system system
     mkdir /mnt/usbdisk_1.7 0000 system system
-    mount rootfs rootfs / ro remount
+
+
+    # bluedroid
+    # mkdir /data/tmp 0771 system system
 
     # usbd permissions
-    mkdir /data/usbd 0777 system system
+    mkdir /data/usbd 0771 system system
 
     # We chown/chmod /data again so because mount is run as root + defaults
     chown system system /data
@@ -53,7 +56,6 @@ on post-fs
     chmod 0750 /data/dontpanic
 
     # Collect apanic data, free resources and re-arm trigger
-
     write /proc/apanic /dev/block/mmcblk0p9
 
     copy /proc/apanic_console /data/dontpanic/apanic_console
@@ -140,14 +142,18 @@ on boot
     chmod 666 /dev/nvodmcam
 
     # bluetooth permissions
-    chmod 0664 /pds/bt/bt_bdaddr
     chmod 0660 /dev/ttyHS2
     chown bluetooth bluetooth /dev/ttyHS2
     chmod 0660 /sys/class/rfkill/rfkill0/state
     chmod 0660 /sys/class/rfkill/rfkill0/type
+    chmod 0660 /sys/class/rfkill/rfkill1/state
+    chmod 0660 /sys/class/rfkill/rfkill1/type
+
     chown bluetooth bluetooth /sys/class/rfkill/rfkill0/state
     chown bluetooth bluetooth /sys/class/rfkill/rfkill0/type
-    write /sys/class/rfkill/rfkill0/state 1
+    chown bluetooth bluetooth /sys/class/rfkill/rfkill1/state
+    chown bluetooth bluetooth /sys/class/rfkill/rfkill1/type
+    write /sys/class/rfkill/rfkill0/state 0
 
     # bluetooth for BCM
     chown root bluetooth /proc/bt_power
@@ -167,7 +173,7 @@ on boot
     chown root system /sys/devices/platform/reg-virt-sw5/enabled
 
     # sdcard tweaks
-    write /sys/block/mmcblk1/bdi/read_ahead_kb 4096
+    write /sys/block/mmcblk1/bdi/read_ahead_kb 2048
 
     # create the necessary dirs for tpapi with proper permission
     mkdir /data/tpapi
@@ -196,9 +202,7 @@ on boot
     chown root radio /data/panicreports
     chmod 0777 /data/panicreports
 
-#===================================================================
-# Backlight needs 0664 for TCMD
-#===================================================================
+    # Backlight needs 0664 for TCMD
     chmod 0664 /sys/class/leds/lcd-backlight/brightness
     chmod 0664 /sys/class/leds/lcd-backlight-tcmd/brightness
     chmod 0664 /sys/class/leds/lcd-backlight-webtop/brightness
@@ -225,30 +229,11 @@ on boot
     chown system system /sys/class/leds/white/brightness
     chmod 0664 /sys/class/leds/white/brightness
 
-# add missing camera crap
-# Camera
-    chown media camera /sys/class/leds/privacy-led/brightness
-    chown media camera /sys/class/leds/flash/brightness
-    chown media camera /sys/class/leds/torch/brightness
-    chmod 660 /sys/class/leds/privacy-led/brightness
-    chmod 660 /sys/class/leds/flash/brightness
-    chmod 660 /sys/class/leds/torch/brightness
-    chown system camera /sys/devices/platform/flashlight.0/leds/flashlight/brig$
-    chmod 0660 /sys/devices/platform/flashlight.0/leds/flashlight/brightness
-
-
-#===================================================================
-# TCMD 
-#===================================================================
-
+    #for some other stuff
     mkdir /data/local 0771 system shell
-    mkdir /data/local/12m 0771 system shell
-    mkdir /data/local/12m/batch 0771 system shell
     mkdir /data/local/tmp 0771 system shell
 
     chown system shell /data/local
-    chown system shell /data/local/12m
-    chown system shell /data/local/12m/batch
     chown system shell /data/local/tmp
 
     mkdir /data/tombstones
@@ -259,20 +244,10 @@ on boot
     chmod 0777 /data/anr
     chown system system /data/anr
 
-    # Required for copying 12M/Batch files to sunfire
-    mkdir /system/local 0771 system shell
-    mkdir /system/local/12m 0771 system shell
-    mkdir /system/local/12m/batch 0771 system shell
-
-    chown system shell /system/local
-    chown system shell /system/local/12m
-    chown system shell /system/local/12m/batch
-
     # vibrator permissions
     chmod 0664 /sys/class/timed_output/vibrator/enable
 
     # sensor interface
-
     chown compass compass /dev/kxtf9
     chmod 660 /dev/kxtf9
     chown compass compass /dev/akm8975
@@ -283,24 +258,10 @@ on boot
     chmod 660 /dev/akm8975_dev
     chown compass compass /dev/akm8975_aot
     chmod 660 /dev/akm8975_aot
-# atvc stuff
-# Define Motorola DBVC ATVC Property defaults (failsafe properties)
-       setprop ro.sys.atvc_allow_netmon_usb 0
-       setprop ro.sys.atvc_allow_netmon_ih 0
-       setprop ro.sys.atvc_allow_res_core 0
-       setprop ro.sys.atvc_allow_res_panic 0
-       setprop ro.sys.atvc_allow_all_adb 0
-       setprop ro.sys.atvc_allow_all_core 0
-       setprop ro.sys.atvc_allow_efem 0
-       setprop ro.sys.atvc_allow_bp_log 0
-       setprop ro.sys.atvc_allow_ap_mot_log 0
-       setprop ro.sys.atvc_allow_gki_log 0
-       mkdir /data/atvc 0775 system shell
-       chown system shell /data/atvc
 
 # touchpad stuff
     chmod 660 /sys/class/misc/touchpad
-    chown compass compass /sys/bus/i2c/drivers/qtouch-obp-ts/0-004a/irqStatus
+    #chown compass compass /sys/bus/i2c/drivers/qtouch-obp-ts/0-004a/irqStatus
 
 # Load Authentec VPN kernel module
     insmod /system/lib/vpnclient.ko
@@ -310,6 +271,7 @@ on boot
 
 # triggered by holding down volume down, volume up and power
 service reboot_key /system/bin/reboot
+    class core
     user system
     oneshot
     keycodes 114 115 107
@@ -334,31 +296,29 @@ on property:tcmd.start_tcmdhelp=1
     start tcmdhelp
 
 service ftmipcd /system/bin/ftmipcd
-    class post-zygote_services
     user radio
     group radio inet
     disabled
 
 # Power up to normal
 on property:tcmd.suspend=0
-    class_start pre-zygote_services
-    class_start zygote_services
-    class_start post-zygote_services
+    class_start core
+    class_start power
+    class_start main
 
 # Power up to suspend 
 on property:tcmd.suspend=1
     write /sys/power/nvrm/lp2policy 0
-    stop wpa_supplicant
-    stop mdm_panicd
-    class_start pre-zygote_services
-    class_start post-zygote_services
+#    stop wpa_supplicant
+#    stop mdm_panicd
+    class_stop main
 
 # Normal to suspend 
 on property:tcmd.suspend=2
     write /sys/power/nvrm/lp2policy 0
-    stop wpa_supplicant
-    stop mdm_panicd
-    class_stop zygote_services
+#    stop wpa_supplicant
+#    stop mdm_panicd
+    class_stop main
 
 # Control ftmipcd 
 on property:tcmd.usb_cable="connected"
@@ -379,42 +339,29 @@ on property:tcmd.ctrl_adb=0
     stop usbd
     start usbd
 
-# turn on bluetooth for tcmd
-# on property:tcmd.bt_mod=1
-#    insmod /system/lib/modules/wl127x-test.ko
-
-
-#turn off bluetooth for tcmd
-# on property:tcmd.bt_mod=0
-#    exec /system/bin/rmmod wl127x_test
-#===================================================================
-
 on property:sys.chargeonly.mode=1
-    class_start pre-zygote_services
-    class_stop post-zygote_services
-    class_stop main
+    class_start power
     stop zygote
     exec /system/bin/charge_only_mode
 
-service nvrm_daemon /system/bin/logwrapper /system/bin/nvrm_daemon
-    class pre-zygote_services
+service nvrm_daemon /system/bin/nvrm_daemon
+    class power
     user root
-    onrestart restart servicemanager
+    #onrestart restart servicemanager
 
 service wpa_supplicant /system/bin/wpa_supplicant -D wext -i eth0 -c /data/misc/wifi/wpa_supplicant.conf -e /data/misc/wifi/entropy.bin
-    class WLAN
+    class main
     socket wpa_eth0 dgram 0660 wifi wifi
     disabled
     oneshot
 
 service dhcpcd_eth0 /system/bin/dhcpcd -ABKL
-    class WLAN
-    #user system  #- this makes socket() calls fail with permission denied
-    #group dhcp
+    class main
     disabled
     oneshot
 
 service iprenew_eth0 /system/bin/dhcpcd -n
+    class main
     group dhcp
     disabled
     oneshot
@@ -431,105 +378,85 @@ service iprenew_bnep0 /system/bin/dhcpcd -n
 
 # Ecompass daemon
 service akmd2 /system/bin/akmd2
-    class post-zygote_services
+    class main
     user compass
     group compass misc input
 
 service secclkd /system/bin/secclkd
-    class post-zygote_services
+    class main
     socket secclk_socket stream 660 system system
     user system
     group system radio system
     oneshot
 
 on property:persist.service.adb.enable=1
-# MOT change to statically link android usb module
-#    insmod /system/lib/hw/g_android.ko
     start adbd
 
 # Battery Daemon
 service battd /system/bin/battd
-    class pre-zygote_services
+    class power
     socket battdsock stream 0660 system system
     user root
     group system system
     oneshot
 
 service usbd /system/bin/usbd
-    class pre-zygote_services
+    class power
     group system
 
-service touch /system/bin/logwrapper /system/bin/touchpad -a
+service touch /system/bin/touchpad -a
+    class main
     user system
     group system
-    class pre-zygote_services
     oneshot
 
 service whisperd /system/bin/whisperd /dev/ttyHS0
-    class post-zygote_services
+    class main
     user root
     oneshot
 
 #start Authentec VPN service
 service vpnclientpm /system/bin/vpnclientpm
-    class post-zygote_services
+    class main
     oneshot
     user root
 
 # ppp daemon used by the ATCMD to support DUN function
 service pppd /system/bin/pppd silent ipparam dun plugin /system/lib/libpppd_plugin.so
-    class post-zygote_services
+    class main
     user root
     disabled
     oneshot
 
 service map /system/bin/sdptool add --channel=20 MAP
-    class post-zygote_services
+    class main
     user bluetooth
     group bluetooth net_bt_admin
     disabled
     oneshot
 
-service hciattach /system/bin/brcm_patchram_plus --enable_hci --enable_lpm \
-    --baudrate 3000000 --use_baudrate_for_download --scopcm 0,2,0,0,0,0,0,0,0,0 \
-    --patchram /etc/firmware/bcm4329.hcd /dev/ttyHS2
+service hciattach /system/bin/bt_init_wrapper.sh
     class main
     user bluetooth
     group bluetooth net_bt_admin
     disabled
-
+    oneshot
 
 on property:init.svc.hciattach=stopping
     exec /system/bin/bt_init -stop
 
+# Modem panic daemon
+service mdm_panicd /system/bin/mdm_panicd
+    class main
+    oneshot
+
 # This is product specific init script which will be appended to init.rc
 # after init.nv_common.rc. 
 
-on early-boot
-        setprop ro.FOREGROUND_APP_MEM 3072
-        setprop ro.VISIBLE_APP_MEM 4608
-        setprop ro.PERCEPTIBLE_APP_MEM 7200
-        setprop ro.HEAVY_WEIGHT_APP_MEM 7200
-        setprop ro.SECONDARY_SERVER_MEM 11776
-        setprop ro.BACKUP_APP_MEM 11776
-        setprop ro.HOME_APP_MEM 11776
-        setprop ro.HIDDEN_APP_MEM 17408
-        setprop ro.EMPTY_APP_MEM 21000
-
 on boot
-	chown system /dev/aes1750
-	chgrp system /dev/aes1750
-	chmod 0600 /dev/aes1750
-	chown system /data/am2data.db
-	chown system /data/am2data.db.meta
-	chgrp system /data/am2data.db
-	chgrp system /data/am2data.db.meta
 
 # Enable ADB
    write /dev/usb_device_mode charge_adb
-
-# Adjust Android LMK
-    write /sys/module/lowmemorykiller/parameters/minfree 3072,4608,7200,11776,17408,21000
 
 # USB IPC Power Management Settings
     write /sys/devices/platform/tegra-ehci.2/usb2/2-1/power/autosuspend 2
@@ -538,83 +465,11 @@ on boot
 # USB1 Host Power Management Settings
     write /sys/devices/platform/tegra-ehci.0/usb1/power/autosuspend -1
 
-# copy /system/etc/motorola/tcmd/cid_template.dat
-    exec /system/bin/cp /system/etc/motorola/tcmd/cid_template.dat /data/local
-
-# Set the default value for bluedroid_ref
-    write /data/tmp/bluedroid_ref 0
-    chown system system /data/tmp/bluedroid_ref
-
-# Adjust Max Read buffer to have initial TCP Recv Win set to 64K
-# This will be overriding one defined in init.rc
-# IKOLYMP-12325- TCP Window Size values, for ATT-CAT10.
-# IKOLYMP-12429- Optimize TCP stack for HSUPA CAT6 throughput
-      setprop net.tcp.buffersize.default 131072,262144,524288,4096,16384,147456
-      setprop net.tcp.buffersize.wifi    131072,262144,524288,4096,16384,147456
-      setprop net.tcp.buffersize.umts    131072,262144,524288,4096,16384,147456
-      setprop net.tcp.buffersize.edge    16384,32768,65536,4096,16384,32768
-      setprop net.tcp.buffersize.gprs    4096,8192,12288,4096,8192,12288
-
-# IKSUNFIRE-2410 WiMAX DL Throughput Improvement
-# set prop Readmin, readInitial, readMax, WriteMin, WriteInitial, WriteMax
-setprop net.tcp.buffersize.wimax 4092,87380,1520768,4096,16384,1900544
-
-# ppp daemon used by DUN.
-service pppd /system/xbin/pppd silent ipparam dun plugin /system/lib/libpppd_plugin.so
-    class post-zygote_services
-    user root
-    disabled
-    oneshot
-
 on device-added-/dev/ttyUSB0
     write /sys/devices/platform/tegra-ehci.2/usb2/2-1/power/autosuspend 2
     write /sys/devices/platform/tegra-ehci.2/usb2/2-1/power/level auto
 
-# Modem panic daemon
-service mdm_panicd /system/bin/mdm_panicd
-    class post-zygote_services
-    oneshot
-
-# For WIMAX TCMD Firmware Support see below
-
-service wimax_sdio /system/bin/insmod /system/lib/bcmsdio.ko
-    class post-zygote_services
-    group system system
-    oneshot
-    disabled
-
-service wimax_mfg /system/bin/insmod /system/lib/bcmwimax.ko "fw_dir=/system/etc/wimax/mfg intf_name=wimax0"
-    class post-zygote_services
-    group system system
-    oneshot
-    disabled
-
-service wimax_prod /system/bin/insmod /system/lib/bcmwimax.ko "fw_dir=/system/etc/wimax/ intf_name=wimax0"
-    class post-zygote_services
-    group system system
-    oneshot
-    disabled
-
-# turn on wimax for tcmd load sdio firmware
-on property:tcmd.load_wimax="sdio"
-   start wimax_sdio
-
-# turn on wimax for tcmd load manufacturing firmware
-on property:tcmd.load_wimax="mfg"
-   start wimax_mfg
-
-# turn on wimax for tcmd load production firmware
-on property:tcmd.load_wimax="prod"
-   start wimax_prod
-
-# turn off wimax
-on property:tcmd.load_wimax="unload1"
-   exec /system/bin/rmmod bcmwimax
-
-on property:tcmd.load_wimax="unload2"
-   exec /system/bin/rmmod bcmsdio
-
-# turn on wimax for tcmd load cal api firmware
-on property:tcmd.load_wimax="calapi_proxy_start"
-    exec /system/bin/calapi_tgtxvi0350
+# Set the default value for bluedroid_ref
+#    write /data/tmp/bluedroid_ref 0
+#    chown system system /data/tmp/bluedroid_ref
 
